syntax = "proto3";

package dubbo.mesh.v1alpha1;

option go_package = "github.com/apache/dubbo-kubernetes/api/mesh/v1alpha1";

message EnvoyAdmin {
  // Port on which Envoy Admin API server will be listening
  uint32 port = 1;
}
